--- a/form.html
+++ b/form.html
@@ -9,17 +9,22 @@
       Name:
       <input type="text" name="fname" />
       <input type="submit" value="Submit" />
+
+      Age:
+      <input id="id1" type="number" min="18" />
+      <input type="submit" value="Login" />
     </form>
 
     <script>
       function validateForm() {
         var x = document.forms["myform"]["fname"].value;
+        var y = document.forms["myform"]["id1"].value;
 
-        if (x == "") {
-          alert("Name must be filled out");
+        if (x == "" || y == "") {
+          alert("Name/ age must be filled out");
           return false;
         } else {
-          document.write("Name submitted");
+          alert("Succesfully logged in");
         }
       }
     </script>
